Annoying af bug on safari

--- a/styles/components/Layout.css
+++ b/styles/components/Layout.css
@@ -7,6 +7,12 @@
   background-color: rgba(255, 255, 255, 0.95);
   width: 100%;
   box-shadow: 0 0 35px 0 rgba(0, 0, 0, .09);
+  .btn-wrapper {
+    width: 200px;
+  }
+  .btn-wrapper > a {
+    display: inline-block !important;
+  }
   .logo {
     margin-right: 20px;
     cursor: pointer;
