--- a/styles/pages/how-to-buy.css
+++ b/styles/pages/how-to-buy.css
@@ -4,7 +4,7 @@
   font-family: 'Mitr';
   color: var(--mainColor);
   h1 {
-    padding-top: 30px;
+    padding-top: 50px;
   }
   p {
     padding-top: 5px;
